# ticktick-mcp

./: .env.example  .replit  CLAUDE.md  Dockerfile  __main__.py  pyproject.toml  railway.toml  requirements.txt  server.py
docs/plans/: 2026-02-13-ticktick-mcp-enhancement.md
tests/: test_models_queries.py  test_queries.py  test_smart_query_tools.py  test_standup_tools.py  test_v2_client.py
ticktick_mcp/: __init__.py  __main__.py  client.py  formatting.py  models.py  queries.py  server.py  v2_client.py
